Integracion de componentes en el index con javascript

--- a/paginas/navbar.html
+++ b/paginas/navbar.html
@@ -26,7 +26,7 @@
         </div>
         <div class="navbar-rigth">
             <ul>
-                <li class="email"><a>diazsantiagoponce1@gmail.com</a></li>
+                <li class="email">diazsantiagoponce1@gmail.com</li>
                 <li class="navbar-shopping-cart">
                     <img class="shopping-cart" src="../multimedia/iconos/icon_shopping_cart.svg">
                     <div><a>2</a></div>
