--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </ul>
         </div>
     </nav>
-    <aside class="product-detail inactive">
+    <aside class="cart-info-container inactive">
         <div class="orden-content">
             <div class="title-container">
                 <img src="../multimedia/iconos/flechita.svg" alt="arrow">
@@ -120,6 +120,24 @@
         </div>
         <button class="primary-button">
             Checkout
+        </button>
+    </aside>
+    <aside class="product-detail inactive">
+        <div class="div-close">
+            <img src="../multimedia/iconos/icon_close.png" alt="button_close">
+        </div>
+        <img src="https://images.pexels.com/photos/2115256/pexels-photo-2115256.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="mouse"> 
+        <div class="product-info">
+            <p>$15,00</p>
+            <p>Mouse Gamer</p>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas mollitia illo aspernatur eaque 
+                error repudiandae recusandae, dolores, est perferendis animi eos repellendus excepturi quae corrupti
+                veritatis fugiat. Dolore, fugit sed.</p>
+        </div>
+        <button class="primary-button detail-button">
+            <img src="../multimedia/iconos/bt_add_to_cart.svg" alt="cart">
+            <p>Add to cart</p>
         </button>
     </aside>
     <section class="main-container">
